Remove sbt from mac os setup